API fixes and additions
